[gd_scene load_steps=14 format=3 uid="uid://ryqfugaur752"]

[ext_resource type="Texture2D" uid="uid://rjwbclga7pq5" path="res://assets/objects/flame.png" id="1_b4skv"]
[ext_resource type="Script" path="res://Objects/bullet.gd" id="1_dgve1"]
[ext_resource type="PackedScene" uid="uid://c0etp0qos8kgq" path="res://Utility/my_hit_box.tscn" id="2_c5tn4"]
[ext_resource type="AudioStream" uid="uid://dc8qjs2kg31gj" path="res://assets/soundeffect/minihit.ogg" id="4_8a3f4"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0v2he"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_bq3ou"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.638614, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5t8j8"]
curve = SubResource("Curve_bq3ou")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_64ovn"]
lifetime_randomness = 0.52
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = 2.03
linear_accel_max = 2.03
tangential_accel_max = 4.06
scale_max = 4.0
scale_curve = SubResource("CurveTexture_5t8j8")
color = Color(0.764706, 1, 1, 1)
anim_speed_min = 1.06
anim_speed_max = 4.31
collision_mode = 2

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3ywce"]

[sub_resource type="Animation" id="Animation_1aq10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_adin8"]
resource_name = "bullet"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8m668"]
_data = {
"RESET": SubResource("Animation_1aq10"),
"bullet": SubResource("Animation_adin8")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_cj5eq"]
radius = 6.0

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_dgve1")
speed = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 7
rotation = 1.5708
texture = ExtResource("1_b4skv")
hframes = 4
vframes = 3
frame = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="Sprite2D"]
modulate = Color(0, 0.854902, 0.866667, 1)
z_index = -1
material = SubResource("CanvasItemMaterial_0v2he")
use_parent_material = true
position = Vector2(0, 1.75)
rotation = 1.5708
amount = 20
process_material = SubResource("ParticleProcessMaterial_64ovn")
texture = SubResource("PlaceholderTexture2D_3ywce")
lifetime = 3.0
explosiveness = 0.79
randomness = 0.49
collision_base_size = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8m668")
}

[node name="MyHitBox" parent="." instance=ExtResource("2_c5tn4")]
damage = 5
my_layer = 3

[node name="CollisionShape2D" parent="MyHitBox" index="0"]
shape = SubResource("CircleShape2D_cj5eq")

[node name="fireSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8a3f4")
volume_db = -14.0
area_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="hit_something" from="MyHitBox" to="." method="_on_my_hit_box_hit_something"]
[connection signal="finished" from="fireSound" to="." method="_on_fire_sound_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="MyHitBox"]
